--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,4 +1,5 @@
 @import "./components/badge.css";
+@import "./components/button.css";
 
 * {
   margin: 0;
@@ -18,4 +19,69 @@ body {
   background-color: #061320ff;
   color: #e5e7eb;
   padding: 16px;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.brand {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.brand-img {
+  width: 3rem;
+  height: 3rem;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.brand-description {
+  h1 {
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+  p {
+    font-size: 1rem;
+  }
+}
+
+.log-container {
+  padding: 1rem;
+  background: #f8fafc;
+  border-radius: 0 0 20px 20px;
+}
+
+.log-title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 15px;
+  color: #475569;
+}
+
+#log {
+  background: white;
+  border: 1px solid #e2e8f0;
+  border-radius: 8px;
+  padding: 15px;
+  height: 100px;
+  overflow-y: auto;
+  font-family: "Courier New", monospace;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.container-btns {
+  background-color: #010b14;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 1rem;
 }
