Finalizando botão teste de impressora

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -40,8 +40,7 @@
 
       <footer class="footer">
         <div class="container-btns">
-          <button class="btn disconnect">Desconectar</button>
-          <button class="btn connect">Conectar</button>
+          <button id="print-test" class="btn connect">Imprimir teste</button>
         </div>
       </footer>
     </div>
