--- a/src/public/css/components/badge.css
+++ b/src/public/css/components/badge.css
@@ -1,6 +1,9 @@
 .badge-section {
   position: relative;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .badge-row {
