--- a/src/views/index.html
+++ b/src/views/index.html
@@ -21,6 +21,12 @@
             </span>
           </p>
         </div>
+        <div class="badge-center">
+          <p>
+            Status Servidor:
+            <span id="status-server" class="badge offline">Desconectado</span>
+          </p>
+        </div>
       </div>
 
       <section class="brand">
