Input para Id do restaurante

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,7 +12,21 @@
   </head>
   <body>
     <div class="container">
-      <div class="badge-section">
+      <section class="brand">
+        <div class="brand-config">
+          <div class="brand-img">
+            <img src="../public/img/logo-agente-branca.svg" alt="logo agente" />
+          </div>
+          <div class="brand-description">
+            <h1>Agente de impressão Rangooo</h1>
+            <p>Versão: <span id="versao-electron">Carregando...</span></p>
+          </div>
+        </div>
+        <button class="settings">
+          <img src="../public/assets/settings.svg" alt="Icon de config" />
+        </button>
+      </section>
+      <section class="badge-section">
         <div class="badge-center">
           <p>
             Status impressora:
@@ -27,28 +41,55 @@
             <span id="status-server" class="badge offline">Desconectado</span>
           </p>
         </div>
-      </div>
-
-      <section class="brand">
-        <div class="brand-img">
-          <img src="../public/img/logo-agente-branca.svg" alt="logo agente" />
-        </div>
-        <div class="brand-description">
-          <h1>Agente de impressão Rangooo</h1>
-          <p>Versão: <span id="versao-electron">Carregando...</span></p>
-        </div>
       </section>
 
-      <div class="log-container">
+      <section class="log-container">
         <div class="log-title">Log de Atividades</div>
         <div id="log"></div>
-      </div>
+      </section>
 
       <footer class="footer">
         <div class="container-btns">
           <button id="print-test" class="btn connect">Imprimir teste</button>
         </div>
       </footer>
+
+      <!-- Modal de Config -->
+      <div
+        id="config-screen"
+        style="display: none; padding: 20px; text-align: center"
+      >
+        <h3>Configuração Inicial</h3>
+        <p>Insira o ID do Restaurante para começar:</p>
+        <input
+          type="text"
+          id="restaurant-id-input"
+          placeholder="Ex: b7a8ae0d..."
+          style="
+            width: 80%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+          "
+        />
+        <br />
+        <button
+          id="btn-salvar-config"
+          style="
+            padding: 10px 20px;
+            cursor: pointer;
+            background-color: #4caf50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+          "
+        >
+          Salvar e Conectar
+        </button>
+      </div>
+
+      <div id="main-screen"></div>
     </div>
     <script src="./renderer.js"></script>
   </body>
