--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -12,7 +12,8 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .container {
@@ -21,7 +22,7 @@ body {
   background-color: #061320ff;
   color: #e5e7eb;
   padding: 16px;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -29,6 +30,7 @@ body {
 
 .container-btns {
   background-color: #010b14;
+  margin-top: auto;
   padding: 16px;
   display: flex;
   align-items: center;
