--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,7 +19,7 @@
           </div>
           <div class="brand-description">
             <h1>Agente de impressão Rangooo</h1>
-            <p>Versão: <span id="versao-electron">1.0.0</span></p>
+            <p>Versão: <span id="versao-electron">v1.0.2</span></p>
           </div>
         </div>
         <button class="settings">
