Busca de impressora

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -2,6 +2,7 @@
 @import "./components/button.css";
 @import "./components/brand.css";
 @import "./components/log.css";
+@import "./components/printer-section.css";
 
 * {
   margin: 0;
