--- a/src/public/css/components/brand.css
+++ b/src/public/css/components/brand.css
@@ -33,11 +33,12 @@
   width: 32px;
   height: 32px;
   cursor: pointer;
-  background-color: transparent;
   border: none;
+  background: none;
 
   img {
     width: 100%;
     height: 100%;
+    z-index: 10;
   }
 }
