Pedido está chegando no app, mas a impressora ainda não imprimi

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -70,6 +70,9 @@
             <button id="print-test" class="print-test btns-printer">
               Testar impressão
             </button>
+            <button id="print-saved" class="print-saved btns-printer">
+              Testar impressora salva
+            </button>
           </div>
           <p id="printer-feedback" class="feedback"></p>
         </div>
